# http-request

./: Cargo.toml  README.md  readme.md
sh/: init.sh
src/: cfg.rs  lib.rs  test_https_proxy.rs
src/body/: enum.rs  impl.rs  type.rs
src/common/: enum.rs  impl.rs  mod.rs  type.rs
src/compress/: constant.rs  impl.rs  mod.rs  type.rs
src/compress/brotli/: decode.rs
src/compress/deflate/: decode.rs  mod.rs
src/compress/gzip/: decode.rs
src/const/: const.rs  mod.rs
src/constant/: common.rs  http.rs  mod.rs  request.rs  type.rs
src/content_type/: impl.rs  type.rs
src/global_trait/: impl.rs  mod.rs  trait.rs
src/global_type/: type.rs
src/header/: type.rs
src/http_url/: impl.rs  type.rs
src/http_version/: impl.rs  type.rs
src/methods/: constant.rs  impl.rs  mod.rs  type.rs
src/protocol/: impl.rs  type.rs
src/request/: cfg.rs  constant.rs  error.rs  mod.rs  proxy_tunnel.rs  request.rs  trait.rs  type.rs
src/request/config/: impl.rs  struct.rs  type.rs
src/request/error/: impl.rs  type.rs
src/request/header/: mod.rs  type.rs
src/request/http_request/: const.rs  impl.rs  mod.rs  struct.rs  trait.rs  type.rs
src/request/http_request_builder/: impl.rs  type.rs
src/request/http_version/: impl.rs  type.rs
src/request/proxy/: impl.rs  struct.rs
src/request/request/: async_impl.rs  const.rs  impl.rs  mod.rs  struct.rs  trait.rs  type.rs
src/request/request_builder/: impl.rs  mod.rs  struct.rs  test.rs  type.rs
src/request/request_url/: impl.rs  type.rs
src/request/shared/: impl.rs  struct.rs
src/request/socket/: mod.rs
src/request/socket/config/: impl.rs  struct.rs
src/request/socket/message/: enum.rs  impl.rs
src/request/socket/proxy/: impl.rs  struct.rs
src/request/socket/shared/: impl.rs  mod.rs  struct.rs  type.rs
src/request/socket/websocket/: impl.rs  mod.rs  struct.rs  trait.rs  type.rs
src/request/socket/websocket_builder/: impl.rs  struct.rs
src/request/tmp/: impl.rs  struct.rs  type.rs
src/request_url/: impl.rs  mod.rs  type.rs
src/response/: impl.rs  mod.rs  trait.rs  type.rs
src/response/http_response_binary/: impl.rs  type.rs
src/response/http_response_text/: impl.rs  type.rs
src/response/response_binary/: impl.rs  struct.rs  type.rs
src/response/response_header/: type.rs
src/response/response_text/: impl.rs  struct.rs  type.rs
src/status_code/: impl.rs  type.rs
src/utils/: mod.rs  vec.rs
src/utils/encode/: const.rs  fn.rs  mod.rs
src/utils/vec/: fn.rs
src/websocket/: mod.rs
src/websocket/config/: impl.rs
src/websocket/message/: impl.rs
src/websocket/proxy/: impl.rs  struct.rs
src/websocket/shared/: impl.rs  type.rs
src/websocket/websocket/: impl.rs  mod.rs  struct.rs  trait.rs  type.rs
src/websocket/websocket_builder/: impl.rs  struct.rs
tests/: mod.rs
tests/request_builder/: fn.rs
