[package]
name = "http-request"
version = "8.67.1"
edition = "2024"
authors = ["ltpp-universe <root@ltpp.vip>"] 
license = "MIT"
description = """http-request is a lightweight, efficient library for building, sending, and handling HTTP/HTTPS requests in Rust applications. It provides a simple and intuitive API, allowing developers to easily interact with web services, whether they use the "HTTP" or "HTTPS" protocol. The library supports various HTTP methods, custom headers, request bodies, timeout, automatic handling of redirects (including detecting redirect loops), and enhanced response body decoding (both automatic and manual), enabling fast and secure communication. Whether working with secure "HTTPS" connections or standard "HTTP" requests, the library is optimized for performance, minimal resource usage, and easy integration into Rust projects."""
keywords = ["http", "request", "response", "tcp", "redirect"]
repository = "https://github.com/ltpp-universe/http-request.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",    
    "Cargo.lock",
    "sh",
    ".github"
]

[dependencies]
http-type = "3.61.1"
rustls = "0.23.25"
webpki-roots = "0.26.8"

[profile.dev]
incremental = true
opt-level = 3
lto = true
panic = "unwind"
debug = false

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
