[package]
name = "http-request"
version = "8.81.11"
edition = "2024"
authors = ["root@ltpp.vip"] 
license = "MIT"
description = """http-request is a lightweight, efficient library for building, sending, and handling HTTP/HTTPS requests in Rust applications. It provides a simple and intuitive API, allowing developers to easily interact with web services, whether they use the "HTTP" or "HTTPS" protocol. The library supports various HTTP methods, custom headers, request bodies, timeout, automatic handling of redirects (including detecting redirect loops), and enhanced response body decoding (both automatic and manual), enabling fast and secure communication. Whether working with secure "HTTPS" connections or standard "HTTP" requests, the library is optimized for performance, minimal resource usage, and easy integration into Rust projects."""
keywords = ["http", "request", "response", "tcp", "redirect"]
repository = "https://github.com/eastspire/http-request.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[dependencies]
http-type = "4.19.3"
rustls = "0.23.27"
serde = "1.0.219"
serde_json = "1.0.140"
webpki-roots = "1.0.0"

[profile.dev]
incremental = true
opt-level = 3
lto = true
panic = "unwind"
debug = false

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
