[package]
name = "http-request"
version = "8.91.30"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """http-request is a lightweight, efficient library for building, sending, and handling HTTP/HTTPS requests in Rust applications. It provides a simple and intuitive API, allowing developers to easily interact with web services, whether they use the "HTTP" or "HTTPS" protocol. The library supports various HTTP methods, custom headers, request bodies, timeout, automatic handling of redirects (including detecting redirect loops), and enhanced response body decoding (both automatic and manual), enabling fast and secure communication. Whether working with secure "HTTPS" connections or standard "HTTP" requests, the library is optimized for performance, minimal resource usage, and easy integration into Rust projects."""
keywords = ["http", "request", "response", "tcp", "redirect"]
repository = "https://github.com/crates-dev/http-request.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[dependencies]
http-type = "5.5.1"
rustls = "0.23.33"
serde = "1.0.228"
serde_json = "1.0.145"
webpki-roots = "1.0.3"
tokio-rustls = "0.26.4"
futures = "0.3.31"
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"

[profile.dev]
incremental = true
opt-level = 3
lto = true
panic = "unwind"
debug = false

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
